# MFractions

./: CMakeEnablePedantic.cmake  CMakeLists.txt  CMakePresets.json  README.md
include/: cxx-bindings.hpp  fractions.h  fractions.hpp  rare-overloads.h
include/core/: config.h  core.h  lib.h  operators.h  overloads.h  typedefs.h
test/: test.c  test.c.cmake  test.cpp  test.cpp.cmake
